Kustomize_Basics/03_kustomize_magics/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: helloworld
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: helloworld
