Kustomize_Basics/03_kustomize_magics/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloworld-ingress
spec:
  rules:
  - host: helloworld.demo.local.hr.jambit.space
    http:
      paths:
      - backend:
          service:
            name: helloworld
            port:
              number: 80
        path: /
        pathType: Prefix
